# pbos-init

./: CMakeLists.txt
init/: CMakeLists.txt  main.c
scripts/ld/i386/: init.lds
